# age

./: Cargo.toml  README.md
age/: Cargo.toml
age-renderer/: Cargo.toml
age-renderer/src/: error.rs  lib.rs  renderer.rs
age/src/: app.rs  backbuffer.wgsl  color.rs  default.wgsl  device.rs  engine.rs  error.rs  font.rs  gen_vec.rs  graphics.rs  image.rs  lib.rs  os.rs  packer.rs  plugin.rs  renderer.rs  sys.rs  util.rs
age/src/graphics/: gpu.rs  mod.rs  renderer.rs  rhi.rs
age/src/math/: mat4.rs  mod.rs  vec2f.rs  vec2i.rs
age/src/shaders/: fullscreen.wgsl  graphics.wgsl  triangle.wgsl
age_math/: Cargo.toml
age_math/src/: lib.rs  mat4.rs  vec2.rs
examples/input/: Cargo.toml
examples/input/src/: main.rs
examples/sandbox/: Cargo.toml
examples/sandbox/src/: main.rs  sprite.wgsl
