[workspace]
members = ["age", "age_math", "examples/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
age = { version = "0.1.0", path = "./age" }
age_math = { version = "0.1.0", path = "./age_math" }

bytemuck = { version = "1.14.3", features = ["derive"] }
pollster = "0.3.0"
wgpu = "0.19.1"
winit = "0.29.10"
